--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github ripo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
     <h3>New code changed</h3>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, illum.</p>
+    
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, labore reprehenderit! Recusandae rerum voluptatum maiores!</p>
 </body>
 </html>
