--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, illum.</p>
     
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, labore reprehenderit! Recusandae rerum voluptatum maiores!</p>
+
+    <P>Lorem, ipsum dolor sit amet consectetur adipisicing.</P>
 </body>
 </html>
